k8s/city-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-deploy
  namespace: ds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: city
  template:
    metadata:
      labels:
        app: city
    spec:
      containers:
        - name: city-container
          image: lorenzo071/city_serv:1.0
          ports:
            - containerPort: 5001
            - containerPort: 9000
