k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ds
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
      name: pod
    - name: exporter
      port: 9000
      targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-deploy
  namespace: ds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: al3gr/microuser:1.0
          ports:
            - containerPort: 5002
            - containerPort: 9000
