k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ds
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: pod
    - name: exporter
      port: 9000
      targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
  namespace: ds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          image: al3gr/microuser:1.0
          ports:
            - containerPort: 5000
            - containerPort: 9000
