k8s/mysql-api.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apidb
  namespace: ds
spec:
  serviceName: "apidb"
  replicas: 1
  selector:
    matchLabels:
      app: apidb
  template:
    metadata:
      labels:
        app: apidb
    spec:
      containers:
        - name: apidb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volume-api
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume-api
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: apidb
  namespace: ds
spec:
  selector:
    app: apidb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
