k8s/mysql-auth.yaml

apiVersion: v1
kind: Service
metadata:
  name: authdb
  namespace: ds
spec:
  selector:
    app: authdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
