k8s/mysql-city.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citydb
  namespace: ds
spec:
  serviceName: "citydb"
  replicas: 1
  selector:
    matchLabels:
      app: citydb
  template:
    metadata:
      labels:
        app: citydb
    spec:
      containers:
        - name: citydb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volume-city
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume-city
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: citydb
  namespace: ds
spec:
  selector:
    app: citydb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
