k8s/mysql-nfy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nfyDb
  namespace: ds
spec:
  serviceName: "nfyDb"
  replicas: 1
  selector:
    matchLabels:
      app: nfyDb
  template:
    metadata:
      labels:
        app: nfyDb
    spec:
      containers:
        - name: nfyDb
          image: al3gr/photodb:1.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql_volume_nfy
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql_volume_nfy
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: nfyDb
  namespace: ds
spec:
  selector:
    app: nfyDb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
