k8s/mysql-sla.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sladb
  namespace: ds
spec:
  serviceName: "sladb"
  replicas: 1
  selector:
    matchLabels:
      app: sladb
  template:
    metadata:
      labels:
        app: sladb
    spec:
      containers:
        - name: sladb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volume-sla
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume-sla
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: sladb
  namespace: ds
spec:
  selector:
    app: sladb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
