k8s/nfy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfy-service
  namespace: ds
spec:
  selector:
    app: nfy
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
      name: pod
    - name: exporter
      port: 9000
      targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfy-deploy
  namespace: ds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfy
  template:
    metadata:
      labels:
        app: nfy
    spec:
      containers:
        - name: nfy-container
          image: lorenzo071/nfy_serv:1.0
          ports:
            - containerPort: 5003
            - containerPort: 9000
