k8s/sla-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: sla-service
  namespace: ds
spec:
  selector:
    app: sla
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
      name: pod
    - name: exporter
      port: 9000
      targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sla-deploy
  namespace: ds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sla
  template:
    metadata:
      labels:
        app: sla
    spec:
      containers:
        - name: sla-container
          image: al3gr/microuser:1.0
          ports:
            - containerPort: 5050
            - containerPort: 9000
