k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ds
  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
spec:
  ingressClassName: "nginx"

  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /auth(/|$)(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 5000

          - pathType: ImplementationSpecific
            path: /city_serv(/|$)(.*)
            backend:
              service:
                name: city-service
                port:
                  number: 5001

          - pathType: ImplementationSpecific
            path: /sla_manager(/|$)(.*)
            backend:
              service:
                name: sla-service
                port:
                  number: 5050
